Fix hero scaling on tablet and mobile devices

--- a/src/components/Chip/style.scss
+++ b/src/components/Chip/style.scss
@@ -22,7 +22,7 @@
     margin-left: 8px;
   }
 
-  @media #{$screen-md} {
+  @media #{$screen-lg} {
     font-size: 25px;
     color: $c_ebony-clay;
 
