--- a/src/components/HeroCard/style.scss
+++ b/src/components/HeroCard/style.scss
@@ -117,7 +117,7 @@
     }
   }
 
-  @media #{$screen-md} {
+  @media #{$screen-lg} {
     margin: initial;
 
     &__header {
